feat: add real reading statistics
